--- a/css/style.css
+++ b/css/style.css
@@ -4813,3 +4813,16 @@ ul {
 	background-image: -ms-linear-gradient(bottom, #F4E2C9 20%, #F4D7C9 100%);
 	background-image: linear-gradient(to bottom, #F4E2C9 20%, #F4D7C9 100%);
 }
+.videoWrapper {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+}
+.videoWrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
